--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "codemirror-lang-EXAMPLE",
-  "version": "0.1.0",
-  "description": "EXAMPLE language support for CodeMirror",
+  "name": "codemirror-lang-ggplot2",
+  "version": "0.1.1",
+  "description": "ggplot2 language support for CodeMirror",
   "scripts": {
     "test": "mocha test/test.js",
     "prepare": "rollup -c"
@@ -21,7 +21,7 @@
     "@lezer/lr": "^1.0.0"
   },
   "devDependencies": {
-    "@lezer/generator": "^1.0.0",
+    "@lezer/generator": "^1.7.2",
     "mocha": "^9.0.1",
     "rollup": "^2.60.2",
     "rollup-plugin-dts": "^4.0.1",
