--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "codemirror-lang-ggplot2",
   "version": "0.1.5",
   "description": "ggplot2 language support for CodeMirror",
+  "keywords": ["codemirror", "ggplot2", "language support"],
+  "homepage": "https://github.com/superjcd/codemirror-lang-ggplot2",
   "scripts": {
     "test": "mocha test/test.js",
     "prepare": "rollup -c"
